Finished collinear points with a perfect score